=======
CHANGES
=======

0.5.3dev (unreleased)
---------------------

- ...


0.5.2 (2009-02-24)
------------------

- raise ValueError for mixed parameters on any JSON-RPC version

- do not test for response len if response is an int

- fixed possible unicode error in case of response error

- made all tests pass (JSONWriter inserts no whitespace)

- added parse_response_headers to allow subclasses to handle header values if
  needed.

- Implemented JSON-RPC 2.0 specification. Use JSON-RPC 2.0 version as default.
  Optional the version 1.0 and 1.1 can be set. See JSON-RPC 2.0 specification
  for more information.


0.5.1 (2008-01-24)
------------------

- Improved meta-data.


0.5.0 (2008-01-21)
------------------

- Initial Release