@@ -1,10 +1,15 @@
 [buildout]
 develop = .
-parts = test checker coverage
+parts = test checker coverage coverage-test
 
 [test]
 recipe = zc.recipe.testrunner
 eggs = z3c.json [test]
+
+[coverage-test]
+recipe = zc.recipe.testrunner
+eggs = ${test:eggs}
+defaults = ['--coverage', '../../coverage']
 
 [checker]
 recipe = lovely.recipe:importchecker
